/*
 * Copyright (c) 2022.
 * Created by Andy Pangaribuan. All Rights Reserved.
 *
 * This product is protected by copyright and distributed under
 * licenses restricting copying, distribution and decompilation.
 */

syntax = "proto3";

package sync_svc;

option go_package = "files/proto/sync_svc";


service SyncService {
  rpc KeyLock(stream KeyLockRequest) returns (stream KeyLockResponse);
}

message KeyLockRequest {
  string channel = 1;
  string key = 2;
  string action = 3;
  string message = 4;
}

message KeyLockResponse {
  string channel = 1;
  string key = 2;
  string code = 3;
  string message = 4;
}
